<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="sample_text">Text</string>
    <string name="msg_check_internet">Looks like you are offline, please check internet connectivity</string>
    <string name="error_network">Api failed due to NetworkErrorException</string>
    <string name="error_socket">Unable to process your request. Please try again</string>
    <string name="error_no_connectivity">Looks like you are offline, please check internet
        connectivity</string>
    <string name="action_modelno">Model No :</string>
    <string name="action_price">Price :</string>
    <string name="action_batchno">Batch No :</string>
    <string name="action_serialno">Serial No :</string>
    <string name="action_submit">Submit</string>
    <string name="action_otp">OTP</string>
    <string name="action_changepassword">CHANGE PASSWORD</string>
    <string name="action_back">Back</string>
    <string name="action_next">Next</string>
    <string name="action_login">Login</string>
    <string name="action_registration">Register</string>
    <string name="action_ok">Ok</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_cancel_request">Cancel Request</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="action_register">Register</string>
    <string name="action_continue">continue</string>
    <string name="action_register_parentof_child">I am a parent of a child with asthma</string>
    <string name="action_register_individual">I am an individual over the age of 16\n managing my own asthma</string>
    <string name="action_verify">verify</string>
    <string name="action_view_full_library">View full library</string>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>
    <string name="action_logout">Logout</string>
    <string name="action_start">Start</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_request_call">Request Call</string>
    <string name="action_take_new_survey">take new survey</string>
    <string name="action_save">save</string>
    <string name="action_discard">discard</string>
    <string name="action_upload_now">Upload Now!</string>
    <string name="action_upload_new_plan">Upload new plan</string>
    <string name="action_why">Why?</string>
    <string name="action_send_verification_code">Send verification code</string>
    <string name="action_hint"> Hint </string>
    <string name="action_update_pwd">Update Password</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_development">Development</string>
    <string name="error_email_req">Email Address is required</string>
    <string name="error_email_notvalid">Please enter valid email address</string>
    <string name="error_password_req">Password is required</string>
    <string name="error_re_enter_password_req">Password is required</string>
    <string name="error_re_enter_password_does_not_match">Re-entered Password does not match</string>
    <string name="error_password_pattern_req">A minimum of 8 characters and must include at least one number</string>
    <string name="error_newpwd_req">New Password is required</string>
    <string name="error_confirmpwd_req">Confirm Password is required</string>
    <string name="error_pwd_notmatched">New and Confirm Password must match</string>
    <string name="error_firstname_req">First Name is required</string>
    <string name="error_lastname_req">Last Name is required</string>
    <string name="error_phone_req">Phone is required</string>
    <string name="error_phone_type_req">Phone type is required</string>
    <string name="error_phone_min_digits">Phone number should be at least 10 digits</string>
    <string name="error_one_phone_req">Please enter a contact number</string>
    <string name="error_timezone_req">Time Zone is required</string>
    <string name="error_zipcode_req">Zip Code is required</string>
    <string name="error_dob_req">Date of Birth is required</string>
    <string name="error_gender_req">Gender is required</string>
    <string name="error_verificationcode_req">Verification Code is required</string>
    <string name="error_dob_patient_is_child">The person being monitored must be at least 5 years old.</string>
    <string name="error_dob_patient_is_user">You must be at least 16 years old to use the Tueo service for managing your own asthma</string>
    <string name="error_dob_futuredate">You cannot select a future date</string>
    <string name="error_email_inuse">Email address already in use</string>
    <string name="error_zipcode_notvalid">Zipcode must be 5 or 9 digits</string>
    <string name="error_postalcode_notvalid">Postalcode must be 5 or 9 digits</string>
    <string name="error_symptoms_future_dates">You cannot select a future date</string>
    <string name="error_future_month">You cannot select a future month</string>
    <string name="error_log_symptoms_selection">Please empty symptoms</string>
    <string name="error_log_symptoms_empty">Please enter Symptoms data</string>
    <string name="error_log_severity_empty">Please select Severity</string>
    <string name="error_log_symptoms_empty_severity">Please select severity</string>
    <string name="error_alert_answer_req">Please select any of the category</string>
    <string name="error_schedule_appointment_req">Please select atleast one for appointment</string>
    <string name="error_tools_answer_req">Please select atleast one</string>
    <string name="error_currentpwd_req">Current Password is required</string>
    <string name="error_new_emailid_req">New EmailId is required</string>
    <string name="error_hospital_req">Hospital is required</string>
    <string name="error_address_req">Address is required</string>
    <string name="error_new_confirm_pwd_not_matched">Password mismatch</string>
    <string name="error_city_req">City is required</string>
    <string name="error_postal_code_req">PostalCode is required</string>
    <string name="progress_login">Logging in...</string>
    <string name="progress_sendotp">Sending otp...</string>
    <string name="progress_verifycode">Verifying code...</string>
    <string name="progress_verifyemail">Verifying email...</string>
    <string name="progress_defaults_registering">Defaults Registering...</string>
    <string name="progress_registering">Registering...</string>
    <string name="progress_changepassword">Changing Password...</string>
    <string name="progress_changeemail">Changing Email...</string>
    <string name="progress_forgotpassword">Forgot Password...</string>
    <string name="progress_alerts">Loading alerts info...</string>
    <string name="progress_alert_message">Loading alert message...</string>
    <string name="progress_alert_summary">Loading alert summary...</string>
    <string name="progress_loading">Loading...</string>
    <string name="progress_learningstatus">Loading recommendations...</string>
    <string name="progress_library">Loading library data...</string>
    <string name="progress_read_topic">Updating read topic...</string>
    <string name="progress_dashboard_tasks">Loading tasks...</string>
    <string name="progress_complete_tasks">Updating task status...</string>
    <string name="progress_get_appointments">Getting Appointment...</string>
    <string name="progress_get_coach_defaults">Loading Coach defaults...</string>
    <string name="progress_schedule_appointment">Scheduling appointment...</string>
    <string name="progress_cancel_appointment">Cancelling appointment...</string>
    <string name="progress_get_module_by_id">Getting module...</string>
    <string name="progress_new_survey_of_patient">Taking new survey...</string>
    <string name="progress_get_survey_of_patients">Getting survey of persons with asthma...</string>
    <string name="progress_calculate_tueo_score">Calculating score...</string>
    <string name="progress_post_survey">Posting survey score...</string>
    <string name="progress_delete_survey">Deleting survey...</string>
    <string name="progress_get_module_info">Getting Module info...</string>
    <string name="progress_uploading_aap_image">Uploading image...</string>
    <string name="progress_get_aap_image">Getting AAP Image...</string>
    <string name="progress_downloading_aap">Downloading AAP...</string>
    <string name="progress_updating_profile">Updating profile...</string>
    <string name="progress_get_doctor_profile">Getting Doctor profile...</string>
    <string name="progress_send_summary_report">Sending summary report...</string>
    <string name="dialog_profile_creation_completed">Registration and profile creation\n completed successfully.</string>
    <string name="dialog_warning_title">Warning</string>
    <string name="dialog_warning_message">Sensor Calibration with ocpied bed not successfully completed. It is highly recomended that you complete calibration. Calibration can be automatically performaed during notmal sleep but data collection will be delayed.</string>
    <string name="dialog_verify_title">Please enter the verification code which\n was sent to %1$s.</string>
    <string name="dialog_logout">Are you sure you want to logout?</string>
    <string name="login_username_hint">Email address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgotpassword_title">Forgot Password?</string>
    <string name="login_password_confirm_msg">You will receive an email with a temporary password.</string>
    <string name="login_forgotpassword_enter_emailid">Enter your email address and we will send you a one-time password to use in resetting it.</string>
    <string name="forgot_password_emailid_hint">Email address</string>
    <string name="changepassword_title">Change Password</string>
    <string name="changepassword_subtitle">You must change your password for future use.</string>
    <string name="changepassword_confirmpassword_hint">Confirm Password</string>
    <string name="changepassword_new_password_hint">Enter new Password</string>
    <string name="eula_title">End User License Agreement</string>
    <string name="register_type_title">Choose one of the following:</string>
    <string name="register_userinfo_title">User Information</string>
    <string name="register_userinfo_subtitle">Please enter information for the person who will be\n using the app.</string>
    <string name="register_firstname_hint">First Name</string>
    <string name="register_lastname_hint">Last Name</string>
    <string name="register_phone_hint">Phone</string>
    <string name="register_type_hint">Type</string>
    <string name="register_emailid_hint">Email Address</string>
    <string name="register_password_hint">Password</string>
    <string name="register_reenter_password_hint">Re-enter Password</string>
    <string name="register_patientinfo_title">Person with asthma</string>
    <string name="register_patientinfo_subtitle">Please enter information for the person with asthma\n who will be monitored.</string>
    <string name="register_phone_type">Type</string>
    <string name="register_timezone_hint">Time Zone</string>
    <string name="register_zipcode_hint">Zip Code</string>
    <string name="register_dateofbirth_hint">Date of Birth</string>
    <string name="register_gender_hint">Gender</string>
    <string name="register_address1_hint">Address1</string>
    <string name="register_address2_hint">Address2</string>
    <string name="register_street_hint">Street</string>
    <string name="register_city_hint">City</string>
    <string name="register_postalcode_hint">Postal Code</string>
    <string name="register_verify_email_hint">Verification Code</string>
    <string name="register_hint_password">Minimum 8 characters with least one number</string>
</resources>