<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <RelativeLayout
        style="@style/BothMatch"
        android:background="@android:color/white">

        <ImageView
            style="@style/BothWrap"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_connect_logo_svg"
            />

        <RelativeLayout
            style="@style/MatchWrap"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/text_forgot_password"
                style="@style/BothWrap"
                fontPath="fonts/OpenSans-Regular.ttf"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="@string/login_forgotpassword_title"
                android:textColor="@color/colorForgotPasswordText"
                android:textSize="21.1sp"
                />

            <TextView
                android:id="@+id/text_enter_emailid"
                style="@style/MatchWrap"
                fontPath="fonts/OpenSans-Regular.ttf"
                android:layout_below="@id/text_forgot_password"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/margin_10"
                android:gravity="center"
                android:text="@string/login_forgotpassword_enter_emailid"
                android:textColor="@color/colorForgotPasswordText"
                android:textSize="11.5sp"
                />

            <com.incon.connect.custom.view.CustomTextInputLayout
                android:id="@+id/input_layout_username"
                style="@style/MatchWrap"
                android:layout_below="@id/text_enter_emailid"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="45dp"
                android:hint="@string/forgot_password_emailid_hint"
                android:textColorHint="@color/colorForgotPasswordHintText"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edittext_username"
                    style="@style/MatchWrap"
                    fontPath="fonts/OpenSans-Regular.ttf"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/colorForgotPasswordHintText"
                    android:textSize="14sp"/>
            </com.incon.connect.custom.view.CustomTextInputLayout>

        </RelativeLayout>


        <!-- layout for bottom buttons -->
        <include
            android:id="@+id/include_register_bottom_buttons"
            style="@style/MatchWrap"
            layout="@layout/view_registration_bottom_buttons"
            android:layout_width="match_parent"
            android:layout_height="47.7dp"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>

</layout>
