<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="register"
            type="com.incon.connect.dto.registration.Register"/>

    </data>

    <ScrollView
        android:id="@+id/scrollview_user_info"
        style="@style/BothMatch"
        android:fadeScrollbars="false"
        android:scrollbarSize="4dp"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        android:scrollbars="vertical">

        <RelativeLayout style="@style/BothMatch">

            <!-- Tueo logo -->
            <ImageView
                android:id="@+id/icon_connect"
                style="@style/BothWrap"
                android:layout_width="130dp"
                android:layout_height="76dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_connect_logo_svg"/>

            <!-- user information title text -->
            <TextView
                android:id="@+id/text_userinfo_title"
                style="@style/BothWrap"
                android:layout_below="@id/icon_connect"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/register_userinfo_title"
                android:textColor="@color/colorForgotPasswordText"
                android:textSize="18sp"/>

            <!-- user information subtitle text -->
            <TextView
                android:id="@+id/text_userinfo_subtitle"
                style="@style/BothWrap"
                android:layout_below="@id/text_userinfo_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/register_userinfo_subtitle"
                android:textColor="@color/colorForgotPasswordText"
                android:textSize="12sp"/>

            <RelativeLayout
                style="@style/BothMatch"
                android:layout_below="@id/text_userinfo_subtitle"
                android:layout_marginTop="30dp">

                <!-- Name -->
                <com.incon.connect.custom.view.CustomTextInputLayout
                    android:id="@+id/input_layout_register_user_name"
                    style="@style/Register_TextInputLayout"
                    android:hint="@string/register_name_hint"
                    app:errorEnabled="true"
                    app:fontName="fonts/OpenSans-Regular.ttf"
                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edittext_register_name"
                        style="@style/Register_TextInputEditText"
                        android:focusable="true"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLength="@integer/character_limit_200"
                        android:maxLines="1"
                        android:tag="0"
                        android:text="@={register.userInfo.name}"/>
                </com.incon.connect.custom.view.CustomTextInputLayout>


                <!-- Phone -->
                <com.incon.connect.custom.view.CustomTextInputLayout
                    android:id="@+id/input_layout_register_phone"
                    style="@style/Register_TextInputLayout"
                    android:layout_below="@id/input_layout_register_user_name"
                    android:hint="@string/register_phone_hint"
                    android:nextFocusRight="@+id/spinner_phone_type"
                    android:nextFocusUp="@+id/edittext_register_lastname"
                    app:errorEnabled="true"
                    app:fontName="fonts/OpenSans-Regular.ttf"
                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edittext_register_phone"
                        style="@style/Register_TextInputEditText"
                        android:focusable="true"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="@integer/character_limit_45"
                        android:maxLines="1"
                        android:tag="2"
                        android:text="@={register.userInfo.phoneNumber}"/>
                </com.incon.connect.custom.view.CustomTextInputLayout>


                <!-- Email ID -->
                <com.incon.connect.custom.view.CustomTextInputLayout
                    android:id="@+id/input_layout_register_emailid"
                    style="@style/Register_TextInputLayout"
                    android:layout_below="@id/input_layout_register_phone"
                    android:hint="@string/register_emailid_hint"
                    app:errorEnabled="true"
                    app:fontName="fonts/OpenSans-Regular.ttf"
                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edittext_register_emailid"
                        style="@style/Register_TextInputEditText"
                        android:focusable="true"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLength="@integer/character_limit_200"
                        android:maxLines="1"
                        android:tag="3"
                        android:text="@={register.userInfo.emailId}"/>
                </com.incon.connect.custom.view.CustomTextInputLayout>

                <!-- Password -->
                <com.incon.connect.custom.view.CustomTextInputLayout
                    android:id="@+id/input_layout_register_password"
                    style="@style/Register_TextInputLayout"
                    android:layout_below="@id/input_layout_register_emailid"
                    android:hint="@string/register_password_hint"
                    app:errorEnabled="true"
                    app:fontName="fonts/OpenSans-Regular.ttf"
                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edittext_register_password"
                        style="@style/Register_TextInputEditText"
                        android:focusable="true"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLength="@integer/character_limit_200"
                        android:maxLines="1"
                        android:tag="4"
                        android:text="@={register.userInfo.password}"/>
                </com.incon.connect.custom.view.CustomTextInputLayout>

                <!-- re-enter Password -->
                <com.incon.connect.custom.view.CustomTextInputLayout
                    android:id="@+id/input_layout_register_reenter_password"
                    style="@style/Register_TextInputLayout"
                    android:layout_below="@id/input_layout_register_password"
                    android:hint="@string/register_reenter_password_hint"
                    app:errorEnabled="true"
                    app:fontName="fonts/OpenSans-Regular.ttf"
                    app:hintTextAppearance="@style/TextInputLayout_FloatingTextColor"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edittext_register_reenter_password"
                        style="@style/Register_TextInputEditText"
                        android:focusable="true"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLength="@integer/character_limit_200"
                        android:maxLines="1"
                        android:tag="5"
                        android:text="@={register.userInfo.confirmPassword}"/>
                </com.incon.connect.custom.view.CustomTextInputLayout>

                <!-- TimeZone -->
                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spinner_gender"
                    style="@style/spinnerItemStyle"
                    android:layout_below="@id/input_layout_register_reenter_password"
                    android:focusable="true"
                    android:hint="@string/register_gender_hint"
                    android:tag="6"
                    app:errorEnabled="true"
                    app:met_floatingLabel="highlight"
                    app:met_textColor="@color/colorForgotPasswordHintText"
                    app:met_textColorHint="@color/colorForgotPasswordHintText"/>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>


</layout>
